# skill-tree-survey

./: .env.production-https  .env.production.example  .gitignore  .setup.config  CLAUDE.md  CONTRIBUTING.md  DOCKER_PRODUCTION.md  GITHUB_ACTIONS_SETUP.md  LICENSE  PRODUCTION_CHECKLIST.md  README.md  Taskfile.yml  database_schema_sql.sql  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx-proxy.conf  setup-ssl.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: build-and-cache.yml  build-and-push.yml  ci.yml  claude-pr-review.yml  cleanup-images.yml  deploy-production.yml  deploy-test.yml  pr-validation.yml  test-connection.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/config/: settings.py
backend/app/core/: config.py
backend/app/dao/: base.py  category_dao.py  factory.py  question_dao.py  response_dao.py  session_dao.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  category_order.py  question.py  response.py  session.py
backend/app/routes/: admin.py  categories.py  questions.py  responses.py  sessions.py
backend/app/schemas/: category.py  question.py  response.py  session.py
backend/app/seeders/: initial_questions.json  seeder.py
backend/app/services/: category_service.py  question_service.py  response_service.py  session_service.py
backend/tests/: conftest.py  test_health.py
docs/: ARCHITECTURE.md  AWS_SETUP.md  DEPLOYMENT.md  GO_LIVE_CHECKLIST.md  WORKFLOW_EXAMPLES.md  database_schema.sql
environments/: .env.development.example  .env.test.example  .gitignore
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  wrangler.jsonc
frontend/src/: App.vue  main.ts  style.css
infrastructure/nginx/: README.md  nginx-main.conf  production.conf  setup-production-nginx.sh  test.conf
infrastructure/ssl-setup/: setup-ssl-amazon.sh
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  README.md  backend.tf  (+6 more)
scripts/: generate-env.sh  generate-tfvars.sh  setup-1password.sh
tasks/: env.yml  helpers.yml  prod.yml  tf.yml
(+26 files in other folders)
